fix: various on styles of UI and footnote visibility (#1099)
* fix: footnote now should be hidden in srcdoc iframes

* fix: eliminate white flash on startup when using dark mode

* feat: rescale UI size with pixel density

--- a/apps/readest-app/src/styles/globals.css
+++ b/apps/readest-app/src/styles/globals.css
@@ -3,8 +3,6 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
   border-radius: 10px;
   scrollbar-gutter: auto !important;
   overscroll-behavior: none;
@@ -23,15 +21,8 @@
   scrollbar-gutter: unset !important;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #222222;
-    --foreground: #e0e0e0;
-  }
-}
-
 html[data-page='default'] {
-  background: #ffffff;
+  background: theme('colors.base-100');
 }
 
 html[data-page='library'] {
@@ -43,8 +34,6 @@ html[data-page='reader'] {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
     sans-serif;
   border-radius: 10px;
